--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         </div>
       </div>
       <div class="project col-lg-4 col-md-6 col-sm-12" id="project4">
-        <img src="images/" alt="">
+        <img src="images/Calculator.jpg">
         <div class="layer">
             <h3>Calculator</h3>
             <p>
